@@ -1658,7 +1658,7 @@ EOF
 	}
 
 	# Get rid of ' * ' at start of every line in the comment block.
-	s%^\s*\*\s*%%;
+	s%^\s*\*\s?%%;
 	# But make sure we don't get rid of the newline at the end.
 	if (!$_) {
 	    $_ = "\n";
@@ -1666,7 +1666,7 @@ EOF
 
 	# If we haven't found the symbol name yet, look for it.
 	if (!$symbol) {
-	    if (m%^(\w+)\s*:?%) {
+	    if (m%^\s*(\w+)\s*:?%) {
 		$symbol = $1;
 	    }
 	    next;
@@ -1676,7 +1676,7 @@ EOF
 	if ($in_return) {
 	    # If we find another valid returns line, we assume that the first
 	    # one was really part of the description.
-	    if (m%^(returns:|return\s+value:|returns\s*)%i) {
+	    if (m%^\s*(returns:|return\s+value:|returns\s*)%i) {
 		$description .= $return_start . $return_desc;
 		$return_start = $1;
 		$return_desc = $';
@@ -1690,9 +1690,9 @@ EOF
 	# If that isn't found, add the text to the end.
 	if ($in_description) {
 	    # Get rid of 'Description:'
-	    s%^Description:%%;
+	    s%^\s*Description:%%;
 
-	    if (m%^(returns:|return\s+value:|returns\s*)%i) {
+	    if (m%^\s*(returns:|return\s+value:|returns\s*)%i) {
 #		print "RETURNS: $_";
 		$return_start = $1;
 		$return_desc = $';
@@ -1705,13 +1705,13 @@ EOF
 	}
 
 	# We must be in the parameters. Check for the empty line at the end.
-	if (m%^$%) {
+	if (m%^\s*$%) {
 	    $in_description = 1;
 	    next;
 	}
 
 	# Look for a parameter name.
-	if (m%^@(\S+)\s*:%) {
+	if (m%^\s*@(\S+)\s*:%) {
 	    my $param_name = $1;
 #	    print "Found parameter: $param_name\n";
 	    # Allow '...' as the Varargs parameter.
